further development, able to add user to users table

--- a/templates/login.html
+++ b/templates/login.html
@@ -29,6 +29,14 @@
             <input name="login" type="email" required>
         </label>
         <label>
+            Twoje imię:
+            <input name="first_name" type="text" required>
+        </label>
+         <label>
+            Twoje nazwisko:
+            <input name="last_name" type="text" required>
+        </label>
+        <label>
             Twój numer telefonu:
             <input name="phone" type="tel" required value="+48 ">
         </label>
