--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,8 @@
+@import url(//fonts.googleapis.com/css?family=Lato);
 
 html,body {
     height:100%;
+    font-family: 'Lato', Helvetica, sans-serif;
 }
 
 .half-page{
